--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@ body {
     background-image: linear-gradient(
                      rgba(0,0,0,0.8),
                      rgba(0,0,0,0.1)),
-                     url('../imgs/bg.jpg')
+                     url('../imgs/back.jpg')
                      ;
                      background-size: cover;
 }
